Devel::Cover::Report::Clover.pm history

Release 0.30 - 18th October 2011
 - BUG: branch+condition needs to be the default
 - BUG: make sure to pass project name from the command line
 - BUG: element (and covered element) totals were wrong and sometimes
   even zero

Release 0.29 - 17th October 2011
 - Decided to take out command existance prereq testing
   out of the Build.PL and Makefile.PL sections.  Will 
   try and solve the missing command problems in other ways
   to prevent cpan tests from exploding

Release 0.28 - 17th October 2011
 - One more place to find 'perl' binary '$^X'
 - One more place to find 'cover' binary '$Devel::Cover::Inc::Base'

Release 0.27 - 15th October 2011
 - Per http://wiki.cpantesters.org/wiki/CPANAuthorNotes, exit(0)
   if we're running in automated testing mode and the 'cover'
   command line program was not found (it's a dependency for testing).

Release 0.26 - 15th October 2011
 - Try and find perl related commands based on the Config module
   paths rather than the unix 'which' command. Same with the
   perl command.

Release 0.25 - 15th October 2011
 - I'm not good at TAP::Harness

Release 0.24 - 15th October 2011
 - tests in verbose mode failed cause of system command STDOUT
   spewing.
 - use TAP::Harness for testing the tests instead of 'prove'

Release 0.23 - 15th October 2011
 - test setup script no longer blindly tries to delete a (nonexistant)
   cover_db.

Release 0.22 - 15th October 2011
 - clover.tt file no longer missing when using Makefile.PL

Release 0.21 - 15th October 2011
 - Fix for tests for working paths containing spaces 
 - Added explicit license file .  License was listed in makefile but
   some tools like it spelled out in a text file.

Release 0.20 - 15th October 2011
 - Fairly substantial change to the Clover stats for 'conditionals' /
   'coveredconditionals'.  Previous to this version, it was only the
   Devel::Cover 'branch' metric.  Now it is the summation of the