@@ -48,40 +48,9 @@ sub files {
 sub metrics {
     my ($self) = @_;
 
-    my $s = $self->summarize();
-
-    my $conditionals         = $s->{branch}->{total}   || 0;
-    my $conditionals_covered = $s->{branch}->{covered} || 0;
-    if ( $self->builder->include_condition_criteria ) {
-        $conditionals         += $s->{condition}->{total}   || 0;
-        $conditionals_covered += $s->{condition}->{covered} || 0;
-    }
-
-    my $statements         = $s->{statement}->{total}   || 0;
-    my $statements_covered = $s->{statement}->{covered} || 0;
-
-    my $subroutines         = $s->{subroutine}->{total}   || 0;
-    my $subroutines_covered = $s->{subroutine}->{covered} || 0;
-
-    my $total         = $conditionals + $statements + $subroutines;
-    my $total_covered = $conditionals_covered + $statements_covered + $subroutines_covered;
-
-    my $metrics = {
-        files   => scalar @{ $self->files },
-        classes => scalar @{ $self->classes() },
-
-        elements            => $total,
-        coveredelements     => $total_covered,
-        statements          => $statements,
-        coveredstatements   => $statements_covered,
-        complexity          => 0,
-        loc                 => $self->loc(),
-        ncloc               => $self->ncloc(),
-        conditionals        => $conditionals,
-        coveredconditionals => $conditionals_covered,
-        methods             => $subroutines,
-        coveredmethods      => $subroutines_covered
-    };
+    my $metrics = $self->SUPER::metrics();
+    $metrics->{files}   = scalar @{ $self->files };
+    $metrics->{classes} = scalar @{ $self->classes() };
 
     return $metrics;
 }
@@ -153,40 +122,8 @@ sub report {
 sub metrics {
     my ($self) = @_;
 
-    my $s = $self->summarize();
-
-    my $conditionals         = $s->{branch}->{total}   || 0;
-    my $conditionals_covered = $s->{branch}->{covered} || 0;
-    if ( $self->builder->include_condition_criteria ) {
-        $conditionals         += $s->{condition}->{total}   || 0;
-        $conditionals_covered += $s->{condition}->{covered} || 0;
-    }
-
-    my $statements         = $s->{statement}->{total}   || 0;
-    my $statements_covered = $s->{statement}->{covered} || 0;
-
-    my $subroutines         = $s->{subroutine}->{total}   || 0;
-    my $subroutines_covered = $s->{subroutine}->{covered} || 0;
-
-    my $total         = $conditionals + $statements + $subroutines;
-    my $total_covered = $conditionals_covered + $statements_covered + $subroutines_covered;
-
-    my $metrics = {
-        classes => scalar @{ $self->classes() },
-
-        elements            => $total,
-        coveredelements     => $total_covered,
-        statements          => $statements,
-        coveredstatements   => $statements_covered,
-        complexity          => 0,
-        loc                 => $self->loc(),
-        ncloc               => $self->ncloc(),
-        conditionals        => $conditionals,
-        coveredconditionals => $conditionals_covered,
-        methods             => $subroutines,
-        coveredmethods      => $subroutines_covered
-    };
-
+    my $metrics = $self->SUPER::metrics();
+    $metrics->{classes} = scalar @{ $self->classes() };
     return $metrics;
 }
 
